--- a/helpsearch/2023/m_helpsearch/resource/css/style_m.css
+++ b/helpsearch/2023/m_helpsearch/resource/css/style_m.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@2.0/nanumsquare.css);
+.normal { font-weight: 400 }
+.bold { font-weight: 700 }
+.bolder { font-weight: 800 }
+.light { font-weight: 300 }
 
 @charset "utf-8";
 /* 
@@ -9,7 +13,7 @@
 
 /* reset */
 *, ::after, ::before{box-sizing: border-box;}
-:root{font-size:62.5%; /* font-size:10px; */}
+:root{font-size:62.5%;}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -34,7 +38,7 @@ time, mark, audio, video{
 }
 article,aside,details,figcaption,figure, footer,header,hgroup,menu,nav,section {display:block;} /* HTML5 display-role reset for older browsers */
 audio, canvas, progress, video {display: inline-block; vertical-align: baseline;}
-div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,button,pre,a{font-family: 'Nanum Gothic', sans-serif; font-size:1.3rem; font-size:13px; line-height: 1.3; color:#4b4b4b;}
+div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,button,pre,a{font-family: 'NanumSquare', sans-serif; font-size:1.3rem; font-size:13px; line-height: 1.3; color:#4b4b4b;}
 html, body{width: 100%; height: 100%;}
 html{-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 body{overflow-x: hidden; overflow-y: auto; -ms-overflow-style:none; -webkit-font-smoothing: antialiased;}
@@ -46,23 +50,21 @@ legend, hr, caption span {position:absolute; left:-3000%;}
 em, address{font-style:normal;}
 table{border-collapse:collapse; border-spacing:0;}
 table caption, legend{top:-9999px; text-indent: -9999px; font-size: 0; line-height: 0;}
-a{background-color: transparent; color:#666; text-decoration:none; -webkit-text-decoration-skip:object;}
-a:hover{color: #4b4b4b;}
+a{background-color: transparent; text-decoration:none; -webkit-text-decoration-skip:object;}
 fieldset, iframe, img, button{border:0;}
-textarea,input[type="file"],input[type="password"],input[type="text"]{text-indent:4px; border:1px solid #ddd;}
-select{padding:0 0 0 5px; height:28px; border:1px solid #e5e5e5;}
+textarea,input[type="file"],input[type="password"],input[type="text"]{text-indent:4px;}
+select{padding:0 0 0 5px; height:28px; border:1px solid #ddd;}
 select{-webkit-appearance: normal; -moz-appearance: normal; appearance: normal; height:28px \0IE8;} /* IE8 전용*/
 select::-ms-expand{ display: none;}
-select:focus, textarea:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="text"]:focus {outline: 1px solid #666; outline-offset: -1px;}
 textarea[readonly="readonly"],button[readonly="readonly"],select[readonly="readonly"],input[readonly="readonly"], 
-textarea[disabled="disabled"],button[disabled="disabled"],select[disabled="disabled"],input[disabled="disabled"]{background:#f5f5f5; border-color:#d4d4d4;}
+textarea[disabled="disabled"],button[disabled="disabled"],select[disabled="disabled"],input[disabled="disabled"]{background:#f7f7f7; border-color:#ddd;}
 input[type=text]::-ms-clear {display: none;}
 input[type="file"]{width:100%;}
 input[type="radio"]{vertical-align:text-bottom;}
-input::placeholder{font-size:12px; font-size:1.2rem; color:#aaa;}
+input::placeholder{font-size:14px; font-size:1.4rem; color:#666;}
 input:-webkit-autofill { -webkit-box-shadow: 0 0 0 30px transparent inset ; -webkit-text-fill-color: #666; }
 input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active { transition: background-color 5000s ease-in-out 0s; }
-img{max-width:100%; width:100%; height:auto;} /* 모바일에서 이미지 선명도 - 노출되는 이미지 사이즈 2배크기의 원본이미지 적용 <img src='img.png' alt='' style='width:원본사이즈 1/2 사이즈 기재' />   */
+img{max-width:100%; height:auto;} /* 모바일에서 이미지 선명도 - 노출되는 이미지 사이즈 2배크기의 원본이미지 적용 <img src='img.png' alt='' style='width:원본사이즈 1/2 사이즈 기재' />   */
 svg{max-width: 100%; width: 100%; user-select : none;}
 :focus{outline: 0;}
 
@@ -70,7 +72,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .clear{zoom:1; clear:both;}
 .clear:after{content:" "; display:block; clear:both;}
 .hide{display:none !important;}
-.divider_vertical:before{content: ''; display: inline-block; width: 1px; height: 10px; background: #888; margin: 0 3px; }
+.divider_vertical:before{content: ''; display: inline-block; width: 1px; height: 10px; background: #ddd; margin: 0 3px; }
 .fl-l{float:left !important;}
 .fl-r{float:right !important;}
 .con_p_20{padding: 0 20px;}
@@ -98,14 +100,39 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .col-11{width: 91.67%;} /* 1/11 COLUMN */
 .col-12{width: 100%;} /* 1 COLUMN */
 
+.section{background: #fff; padding: 0 20px;}
+.section_top{border-bottom: 1px solid #ddd;}
+.section_middle{}
+.bg_gray{background: #f7f7f7;}
+.header_title{text-align: center; padding-top: 50px;}
+.header_title h1{font-size: 5.8vw; letter-spacing: -1px;}
+.header_title h1 b{font-weight: 900;}
+.form_control{display: inline-block; width: 100%; height: 48px; background: #fff; font-size:16px; font-size: 1.6rem; font-weight: 600; border: 2px solid #0085e2; padding: 5px 10px;}
 
+.content_search_bar{display: flex; flex-wrap: nowrap; justify-content: center; align-items: center; width: 100%; padding: 30px 0 50px 0;}
+.content_search_bar .btn_logo{width: 48px; margin-right: 5px;}
+.content_search_bar .btn_logo a{display: block; position: relative;}
+.content_search_bar .form_searchbar{display: flex; flex-grow: 1; flex-shrink: 0; flex-basis: 200px;}
+.content_search_bar .input_group{display: flex; width: 100%;}
+.content_search_bar .input_group .btn_search{flex-shrink: 0; background: #0085e2; border: 1px solid #0085e2; color: #fff; font-size:16px; font-size: 1.6rem; font-weight: 600; padding: 5px 20px; margin-left: -1px;}
 
+.content_shop{position: relative; padding: 30px 0 10px 0;}
+.content_shop .list_stie{position: relative; overflow: hidden; max-width: 728px; margin:0 -8px; }
+.content_shop .list_stie li{width: 50%; float: left;; padding: 8px 8px;}
+.content_shop .list_stie li a{display: block; position: relative; text-align: center; background: #fff;  border: 1px solid #eee;}
+.content_shop .list_stie li a span{display: block; position: absolute; left: 0; bottom: 0; width: 100%; padding: 5px 0 15px;}
 
-
-
+/* AD banner */
+.content_ad{position: relative; padding: 20px 0 40px;}
+.ad_banner{position: relative; background: #f7f7f7; border: 1px solid #ddd;}
+.ad_banner.bottom{min-height: 50px; text-align: center;}
 
 /* footer */
 .section_footer{text-align: center; border-top: 1px solid #f5f5f5; padding:20px 10px;}
 .section_footer .policy-info a, .section_footer .office-info, .section_footer .copyright{color:#666; font-size:11px; font-size:1.1rem; line-height: 1.6;}
 .section_footer .policy-info{padding-bottom: 8px;}
 .section_footer .copyright{position: relative; padding-top:15px;}
+
+
+.wrap_search .section_top .content_search_bar{padding: 50px 0 30px 0;}
+
