--- a/helpsearch/2023/mobile/resource/css/style_m.css
+++ b/helpsearch/2023/mobile/resource/css/style_m.css
@@ -191,7 +191,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .list_result .channel_info .link_site{margin-left: 0;}
 .list_result .channel_info .link_site:before{content: ''; display: inline-block; position: relative; top:-3px; width: 2px; height: 2px; border-radius: 50%; background: #848484; margin: 0 8px 0 3px;}
 .list_result .qna_mark{float: left; font-size: 18px; font-size: 1.8rem; font-weight: 500; color: #008e47; margin-right: 10px;}
-.list_result .answer{display: block; position: relative; overflow: hidden;}
+.list_result .answer{position: relative; overflow: hidden;}
 .list_result .pictures{display: grid; grid-template-columns: repeat(auto-fit,minmax(15rem,1fr)); gap: .5rem; position: relative; width: 100%; padding-bottom: 20px;}
 .list_result .pictures a{position: relative; width: 100%; border: 3px solid transparent;}
 .list_result .pictures a img{position: absolute; width: 100%; height: 100%; object-fit: cover;}
