--- a/helpsearch/2023/mobile/resource/css/style_m.css
+++ b/helpsearch/2023/mobile/resource/css/style_m.css
@@ -143,9 +143,10 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 
 .content_shop{position: relative; padding: 30px 0 10px 0;}
 .content_shop .list_stie{position: relative; overflow: hidden; max-width: 728px; margin:0 -8px; }
-.content_shop .list_stie li{width: 50%; float: left;; padding: 8px 8px;}
+.content_shop .list_stie li{width: 33.333%; float: left;; padding: 5px 5px;}
 .content_shop .list_stie li a{display: block; position: relative; text-align: center; background: #fff;  border: 1px solid #eee;}
 .content_shop .list_stie li a span{display: block; position: absolute; left: 0; bottom: 0; width: 100%; padding: 5px 0 15px;}
+.content_shop .list_stie li a img{width: 116px;}
 
 /* AD banner */
 .content_ad{position: relative; padding: 20px 0 40px;}
