--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -288,7 +288,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .content_reward_ad .category_menu .list_item a.active{background: #272936; border: 1px solid #272936; color: #fff;}
 .content_reward_ad .category_menu .list_item a:hover{border: 1px solid #272936;}
 .content_reward_ad .product_list .info_product .info_sub_title{display: inline-block; font-size: 11px; font-size: 1.1rem;}
-.content_reward_ad .product_list .info_product .info_title{font-size: 13px; font-size: 1.3rem !important; padding-bottom: 5px;}
+.content_reward_ad .product_list .info_product .info_title{font-size: 13px; font-size: 1.3rem !important; margin-bottom: 5px;}
 .content_reward_ad .product_list .product_price{position: relative; padding: 5px 0;}
 .content_reward_ad .product_list .product_price .badge_price{display: inline-block; position: relative; width: 18px; height: 18px; background: #e21d19; color: #fff; font-size: 13px; font-size: 1.3rem; font-weight: 700; vertical-align: middle; border-radius: 50%; padding: 2px 5px; -webkit-touch-callout: none; user-select: none;}
 .content_reward_ad .product_list .product_price .price{position: relative; font-size: 15px; font-size: 1.5rem; vertical-align: middle;}
@@ -298,7 +298,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .content_reward_ad .content_list .list_item .img_box{position: relative; overflow: hidden; width: 68px; min-width: 68px; height: 68px; border-radius: 6px; margin-right: 15px; background: #E6E6E6;}
 .content_reward_ad .content_list .list_item .info_product {margin-right: 15px;}
 .content_reward_ad .content_list .list_item .info_product .info_title{font-size: 15px; font-size: 1.5rem; font-weight: 600;}
-.content_reward_ad .content_list .list_item .info_product .info_summary{padding: 5px 0;}
+.content_reward_ad .content_list .list_item .info_product .info_summary{margin: 5px 0;}
 .content_reward_ad .content_list .list_item .item_right{margin-left: auto;}
 
 /* event Page */
