--- a/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
+++ b/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
@@ -106,6 +106,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .section_intro .content_item, .section_intro .content_item.item_02{flex-direction: column-reverse; padding: 30px 0;}
     .section_intro .intro_des{text-align: center;}
     .section_guide{padding-bottom: 40px;}
+    .acc-item .acc-contents{padding: 10px 20px 10px 20px;}
 }
 @media screen and (max-width: 360px) {
     
