--- a/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
+++ b/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
@@ -108,6 +108,8 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .section_guide{padding-bottom: 60px;}
     .content_guide .content_box .btn_guide span{font-size: 16px; font-size: 1.6rem;}
     .section_faq .head-title{padding: 20px 0;}
+    .acc-item .acc-head .heade-title{font-size: 16px; font-size: 1.6rem;}
+    .acc-item .style_aw p{font-size: 14px; font-size: 1.4rem;}
     .acc-item .acc-contents{padding: 10px 10px 20px 10px}
     .acc-item .acc-head{padding: 20px 10px 10px;}
 }
