--- a/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
+++ b/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
@@ -22,7 +22,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     * Custom Style 
 */
 .wrap{position: relative; width: 100%; height: 100%;}
-.section{display: inline-block; position: relative; width: 100%; margin: 60px 0; padding: 60px 0;}
+.section{display: inline-block; position: relative; width: 100%; padding: 60px 0;}
 .content_fl{display: flex; flex-direction: column; -webkit-box-pack: center; justify-content: center; -webkit-box-align: center; align-items: center;}
 .content_left{width: 50%; align-items: flex-start; padding-right: 20px;}
 .content_right{width: 50%; user-select: none;}
