--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -200,6 +200,17 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .item_upload label{position: absolute; left: 0; top: 0; right: 0; bottom: 0; width: 100%; overflow: hidden; background: #f7f7f7; padding: 10px 10px; z-index: 1;}
 .item_upload label.prev{background-size: cover; background-position: center;} 
 .item_upload label.prev .icon_box{display: none;}
+
+.item_upload label .btn_box_close{display: none;}
+.item_upload label.prev .btn_box_close{display: block;}
+.upload_box .item_upload .btn_box_close{position: absolute; top: -6px; right: -5px; padding:5px 5px;}
+.upload_box .item_upload .btn_box_close .btn_close{display: inline-block; vertical-align: middle; background:#333; width: 20px; height: 20px; padding:0;}
+.upload_box .item_upload .btn_box_close .btn_close:focus{outline:0;}
+.upload_box .item_upload .btn_box_close .btn_close .icon{display: inline-block; position: relative; overflow: hidden; width: 11px; height: 11px; opacity: 1;}
+.upload_box .item_upload .btn_box_close .btn_close .icon-close:before, .upload_box .item_upload .btn_box_close .btn_close .icon-close:after{content: ''; position: absolute; width: 100%; height:2px; top:50%; right:0; background:#fff;}
+.upload_box .item_upload .btn_box_close .btn_close .icon-close:before{-webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);}
+.upload_box .item_upload .btn_box_close .btn_close .icon-close:after{-webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg)}
+
 .icon_box{position: absolute; top:50%; left: 50%; transform: translate(-50%, -50%);}
 .icon_box .icon{display: block; position: relative;}
 .icon_box .icon_plus{ width: 2px; height: 15px; background: #ddd;}
