--- a/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
+++ b/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
@@ -81,7 +81,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 @media screen and (max-width: 900px) {
     
     .head-title h1{font-size: 32px; font-size: 3.2rem;}
-    .section_main .item_logo{max-width: 220px;}
+    .section_main .item_logo{max-width: 220px;} 
     .section_main .head-title .tit_lg{font-size: 40px; font-size: 4rem;}
     .section_main .intro_des .item_tag{font-size: 13px; font-size: 1.3rem;}
     .section_main .img_main_visual{min-width: 550px; width: 100%; top:0}
@@ -101,11 +101,12 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .wrap_cashmate .section_main .contents{flex-direction: column-reverse; height: 100%;}
     .wrap_cashmate .section_main .content_left{width: 100%; align-items: center; padding-right: 0; padding: 10px 0 40px;}
     .wrap_cashmate .section_main .content_right{width: 100%; align-items: center; padding: 20px 0 10px 0;}
-    .section_main .img_main_visual{max-width: 400px; top: 0;}
+    .section_main .img_main_visual{min-width: 400px; top: 0;}
     .head-title h1{font-size: 24px; font-size: 2.4rem;}
     .section_main .item_logo{max-width: 220px;}
     .section_main .head-title{text-align: center;}
     .section_main .head-title h1{font-size: 30px; font-size: 3.0rem;}
+    .section_main .head-title .tit_lg{font-size: 34px; font-size: 3.4rem;}
     .section_main .intro_des{padding: 0 0 10px 0;}
     .section_main .intro_des .item_tag{margin: 0 5px; padding: 0;}
     .section_main .btn_banner{max-width: 200px;}
@@ -122,7 +123,9 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 }
 @media screen and (max-width: 360px) {
     .mb-20{margin-bottom: 10px !important;}
-    .section_main .img_main_visual{min-width: 400px;}
+    .section_main .img_main_visual{min-width: 350px;}
+    .section_main .head-title h1{font-size: 20px; font-size: 2rem;}
+    .section_main .head-title .tit_lg{font-size: 26px; font-size: 2.6rem;}
     .section_main .intro_des .item_tag{font-size: 11px; font-size: 1.1rem;}
     .section_intro .content_item, .section_intro .content_item.item_02{padding: 20px 0;}
     .section_intro .intro_des .content_title{font-size: 19px; font-size: 1.9rem;}
