--- a/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
+++ b/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
@@ -108,7 +108,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .section_main .head-title h1{font-size: 30px; font-size: 3.0rem;}
     .section_main .head-title .tit_lg{font-size: 34px; font-size: 3.4rem;}
     .section_main .intro_des{padding: 0 0 10px 0;}
-    .section_main .intro_des .item_tag{margin: 0 5px; padding: 0;}
+    .section_main .intro_des .item_tag{background: transparent; margin: 0 5px; padding: 0;}
     .section_main .btn_banner{max-width: 200px;}
     .section_intro .content_item, .section_intro .content_item.item_02{flex-direction: column-reverse; padding: 30px 0;}
     .section_intro .intro_des{text-align: center;}
