--- a/clipdown/2023/webview/reward/view/download_section.html
+++ b/clipdown/2023/webview/reward/view/download_section.html
@@ -84,11 +84,11 @@
                                 <div class="tooltip_layer notice_tooltip" aria-hidden="true">
                                     <div class="notice_header">
                                         <strong>포인트 적립 안내</strong>
-                                        <!-- <div class="btn_box_top">
+                                        <div class="btn_box_top">
                                             <button type="button" class="btn_popup_close" name="close">
                                                 <span class="btn_close icon-close"></span>
                                             </button>
-                                        </div> -->
+                                        </div>
                                     </div>
                                     <ul class="notice_list">
                                         <li class="item_notice">- 동영상 시청 3분마다 포인트가 적립됩니다.</li>
