--- a/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
+++ b/clipdown/2023/web/cashmate/common_resource/css/style_cashmate.css
@@ -63,6 +63,25 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .content_guide .content_box .btn_guide{display: inline-block; background: #01875f; color: #fff; border-radius: 5px; padding: 12px 12px 10px 12px;}
 .content_guide .content_box .btn_guide:hover{text-decoration: none;}
 .content_guide .content_box .btn_guide span{font-size: 16px; font-size: 1.6rem; font-weight: 500;}
+.tooltip_reward{position: relative; margin: 40px 0 0;}
+.tooltip_reward .btn_tooltip{display: flex; align-items: stretch; justify-content: center; cursor: pointer;}
+.tooltip_reward .btn_tooltip .text_des{font-size: 16px; font-size: 1.6rem; padding-right: 5px;}
+.tooltip_reward .btn_tooltip .icon_tooltip{position: relative; padding: 1px 0;}
+.tooltip_reward .btn_tooltip .icon_tooltip svg{position: relative; width: 16px; height: 16px; vertical-align: top;}
+.tooltip_reward .tooltip_layer{display: none; position: absolute; top:0; left: 50%; width: 100%; max-width: 340px; transform: translate(-50%, 30%); z-index: 1000; }
+.tooltip_reward .tooltip_layer.notice_tooltip{background: #fff; border: 1px solid #2C2F42;padding: 10px 10px; box-sizing: border-box; box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.15); }
+.tooltip_reward .tooltip_layer.notice_tooltip .notice_header{position: relative; padding-bottom: 5px;}
+.tooltip_reward .tooltip_layer.notice_tooltip .notice_header strong{font-size: 14px; font-size: 1.4rem; font-weight: 600;}
+.tooltip_reward .tooltip_layer.notice_tooltip .notice_list{padding: 0; margin: 0;}
+.tooltip_reward .tooltip_layer.notice_tooltip .notice_list .item_notice{font-size: 13px; font-size: 1.3rem; padding-bottom: 3px;}
+.btn_box_top{position: absolute; top: -5px; right: 0; }
+.btn_box_top .btn_popup_close{display: inline-block; vertical-align: middle; background:transparent; width: 14px; height: 14px; border:0; padding:0; cursor: pointer;}
+.btn_box_top .btn_popup_close:focus{outline:0;}
+.btn_box_top .btn_popup_close .btn_close{display: inline-block; position: relative; overflow: hidden; width: 14px; height: 14px; opacity: 1;}
+.btn_box_top .btn_popup_close .icon-close:before, .btn_box_top .btn_popup_close .icon-close:after{content: ''; position: absolute; width: 100%; height:1px; top:50%; right:0; background:#9E9EA5;}
+.btn_box_top .btn_popup_close .icon-close:before{-webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);}
+.btn_box_top .btn_popup_close .icon-close:after{-webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg)}
+
 
 .section_faq{} 
 .accordion-list-box{width: 100%; padding-top: 20px; padding-bottom: 20px;}
@@ -134,6 +153,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .section_intro .intro_des .content_title, .intro_des_m .content_title{font-size: 19px; font-size: 1.9rem;}
     .section_intro .intro_des .text_des, .intro_des_m .text_des{font-size: 15px; font-size: 1.5rem; padding: 10px 0;}
     .section_intro .item_img{max-width: 300px;}
+    .section_guide .content_guide{--auto-grid-min-size: 16em;}
     .content_guide .content_box .item_img{max-width: 250px}
     .content_guide .content_box .text_des span{font-size: 16px; font-size: 1.6rem; }
     .accordion-list-box{padding-top: 10px; padding-bottom: 10px;}
@@ -141,4 +161,9 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .acc-item .acc-head .head-title{font-size: 14px; font-size: 1.4rem;}
     .acc-item .acc-contents{padding: 5px 0 10px 0;}
     .acc-item .style_aw p, .acc-item .style_aw .aw_list li{font-size: 13px; font-size: 1.3rem;}
+    .tooltip_reward .tooltip_layer{transform: translate(-50%, 20%);}
+    .tooltip_reward .btn_tooltip .text_des{font-size: 14px; font-size: 1.4rem;}
+    .tooltip_reward .tooltip_layer.notice_tooltip .notice_header strong{font-size: 12px; font-size: 1.2rem;}
+    .tooltip_reward .tooltip_layer.notice_tooltip .notice_list .item_notice{font-size: 12px; font-size: 1.2rem;}
 }
+
