--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -555,7 +555,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .ad_style01 .badge_point.ad .point_data{color: #e21d19; font-size: 15px; font-size: 1.5rem; line-height: 1.6;}
 .ad_style01 .content_ad_info{position: relative; text-align: left; height: 400px; overflow-y: auto; padding: 10px 0 20px;}
 .ad_style01 .content_ad_info .content_heading{font-size: 13px; font-size: 1.3rem; font-weight: 600; padding: 0 10px 10px;}
-.ad_style01 .content_ad_info .content_des{line-height: 1.5; padding: 0 15px 0 10px;}
+.ad_style01 .content_ad_info .content_des{line-height: 1.5; padding: 0 15px 0 10px; white-space: pre-line;}
 .ad_style01 .content_box .content_item{margin-top: 30px; padding: 0 10px;}
 
 
